<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Signup_Activity_1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/username"
        android:hint="@string/Username"
        android:paddingLeft="2dp"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/Confirmpassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#04ea00"
        android:text="@string/register"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

    </LinearLayout>

    <TextView
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/AlreadyRegistered"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textview_login"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/Login"
        android:textColor="#04ea00"
        android:textSize="22sp"
        android:textStyle="bold" />

</LinearLayout>